--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -3,7 +3,7 @@ name: Docker build & push image
 on:
   push:
     branches: [main]
-    tags: ["v*"]
+    tags: ["main*"]
   pull_request:
     branches: [main]
     paths:
